--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="image_date">생성일시 : %s</string>
     <string name="search_title">이미지검색</string>
     <string name="search_result">이미지검색 (검색어 : %s)</string>
+    <string name="description">상세화면 이미지</string>
 
 </resources>
